// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create and update nodes allows creating nodes 1`] = `
Object {
  "payload": Object {
    "children": Array [],
    "contentDigest": "hasdfljds",
    "id": "hi",
    "mediaType": "test",
    "parent": "test",
    "pickle": true,
    "pluginName": "tests",
    "type": "Test",
  },
  "type": "CREATE_NODE",
}
`;

exports[`Create and update nodes allows creating nodes 2`] = `
Object {
  "hi": Object {
    "children": Array [],
    "contentDigest": "hasdfljds",
    "id": "hi",
    "mediaType": "test",
    "parent": "test",
    "pickle": true,
    "pluginName": "tests",
    "type": "Test",
  },
}
`;
